# YOLOs-CPP

./: CMakeLists.txt  README_ROS.md  package.xml
config/: default.yaml
launch/: yolo_detection.launch
models/: coco.names
src/: camera_inference.cpp  yolo_detection_node.cpp
